Reasonable Bootstrap Layout Achieved... but maybe look into fixing up all of the excess whitespace surrounding the central area... is there a better way to distribute this out, possibly by upscaling/downscaling things? TODO: check out mobile, contemplate bootstrap adjustments, fix the audiocontext warning

--- a/579/hw5/style.css
+++ b/579/hw5/style.css
@@ -23,6 +23,10 @@ p {
     font-family: 'Noto Serif JP';
 }
 
+section, footer {
+    margin: 6px;
+}
+
 table, th, td {border: 1px solid;}
 
 td{ padding: 3px;}
